fix(deck-builder): align buttons for improved layout

--- a/assets/db-style.css
+++ b/assets/db-style.css
@@ -26,7 +26,7 @@ header {
 }
 
 .search-container {
-    margin-left: 20%;
+    margin-left: 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -286,6 +286,8 @@ body {
 
 /* Estilo de la barra de nombre de la baraja */
 .name-deck-bar {
+    margin-top: 0.5%;
+    margin-right: 12%;
     position: fixed; /* Fija la barra en la parte superior de la ventana */
     top: 20px; /* Ajusta la distancia desde el borde superior */
     right: 20px; /* Ajusta la distancia desde el borde derecho */
